keep adding style

--- a/_posts/2021-03-25-ghdl.md
+++ b/_posts/2021-03-25-ghdl.md
@@ -5,6 +5,7 @@ tags:
     - VHDL
     - Tools
 ---
+{% assign listing_num = 1 %}
 
 GHDL is "a VHDL analyzer, compiler, simulator and (experimental) synthesizer that can process (nearly) any VHDL design."
 
@@ -32,28 +33,18 @@ The remainder of this post will assume you are running on Ubuntu or a similar OS
 
 For a simple, one file design and a single testbench the following script will build and run the simulation:
 
-```bash
-#!/bin/env bash
-# file: build.sh
+{%
+  include bash_code_snippet.html
+  listing_num=listing_num
+  description="Script for building simple designs with a testbench"
+  dir="includes/ghdl/"
+  file="build_simple.sh"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
-if [[ $# -lt 1 || $# -gt 1 ]]; then
-  echo "Usage: build.sh design_name"
-  exit 1
-fi
+Remember to set executable permissions `chmod +x build_simple.sh` and then run the script with for example:
 
-design=$*
-testbench=${design}_tb
-
-set -ex
-
-ghdl -i $design.vhd $testbench.vhd
-ghdl -m $testbench
-ghdl -r $testbench
-```
-
-Remember to set executable permissions `chmod +x build.sh` and then run the script with for example:
-
-`./build.sh half_adder`
+`./build_simple.sh half_adder`
 
 to run it on the same half adder design from [nandland](https://www.nandland.com/vhdl/modules/module-half-adder.html) which I used in the [VHDL Style Guide]({% post_url 2021-03-15-vhdl-style-guide %}) post.
 
@@ -77,9 +68,14 @@ library pltbutils;
 
 you can build that library using the following script:
 
-```bash
-{% include_relative includes/ghdl/buildlib.sh %}
-```
+{%
+  include bash_code_snippet.html
+  listing_num=listing_num
+  description="Script for building libraries"
+  dir="includes/ghdl/"
+  file="buildlib.sh"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 Remember to set executable permissions `chmod +x buildlib.sh` and then to build the library from source (which I have downloaded to `~/Dev/hdl/pltbutils`) you can run:
 
@@ -91,10 +87,14 @@ This creates a `pltbutils-obj93.cf` in `_work` which GHDL can use as a resource 
 
 To direct GHDL to include the libraries placed in a certain directory we need to point to it with the `-P` option.
 
-```bash
-{% include_relative includes/ghdl/build.sh %}
-```
-
+{%
+  include bash_code_snippet.html
+  listing_num=listing_num
+  description="Script for building simple designs that use libraries"
+  dir="includes/ghdl/"
+  file="build.sh"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 Now, running `./build.sh half_adder_pltb` gives the output:
 ```
