--- a/_posts/2021-03-27-vunit.md
+++ b/_posts/2021-03-27-vunit.md
@@ -5,6 +5,7 @@ tags:
     - VHDL
     - Tools
 ---
+{% assign listing_num = 1 %}
 
 VUnit "features the functionality needed to realize continuous and automated testing" of HDL code.
 It takes care of building, running tests (via a simulator like [GHDL]({% post_url 2021-03-25-ghdl %})) and evaluating the results. It also offers VHDL convenience procedures, functions and components as well as Verification Components. This post will cover the build/run functionality, the convenience library will be covered in a separate post.
@@ -17,14 +18,24 @@ You can install VUnit with `pip instal vunit_hdl` and documentation is available
 
 For a simple, one file design and a single testbench the following python script will build and run the simulation:
 
-```python
-{% include_relative includes/vunit/run.py %}
-```
+{%
+  include python_code_snippet.html
+  listing_num=listing_num
+  description="VUnit run script in python"
+  dir="includes/vunit/"
+  file="run.py"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 Note that VUnit needs to get access to your VHDL testbench to do its magic so this is the minimum you need to add for VUnit to run your tests:
-```vhdl
-{% include_relative includes/vunit/basic.vhd %}
-```
+{%
+  include vhdl_code_snippet.html
+  listing_num=listing_num
+  description="Basic template for VUnit testbenches"
+  dir="includes/vunit/"
+  file="basic.vhd"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 Output from running `./run.py`:
 
@@ -39,18 +50,28 @@ I'll demonstrate configuration of tests with the same half adder design from [na
 
 I have isolated the code that configures the VUnit library from the CLI code in the `Library` class, this way I can import the configuration in another python script such as in an [Invoke](http://docs.pyinvoke.org/en/latest/getting-started.html) script, example [here](#invoke-example).
 
-```python
-{% include_relative includes/vunit/run_vunit.py %}
-```
+{%
+  include python_code_snippet.html
+  listing_num=listing_num
+  description="Configuring with VUnit"
+  dir="includes/vunit/"
+  file="run_vunit.py"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 On the last line of `configure_run` I've used a generic `fail` by calling [add\_config](https://vunit.github.io/py/vunit.html#vunit.ui.test.Test.add_config) on the `logic` test to demonstrate how to configure tests and as a byproduct: to show the appearance of failing tests in VUnit. I could have used [lib.set\_generic](https://vunit.github.io/py/vunit.html#vunit.ui.library.Library.set_generic), but that sets the generic for all tests and I would have to run the python script several times with different arguments, perhaps leveraging VUnit's [custom CLI arguments](https://vunit.github.io/py/ui.html#adding-custom-command-line-arguments) recipe. However, by adding a test configuration VUnit runs the test twice, once for each configuration I've told it about.
 
 Expand the "VHDL tesbench code" below for a look at the VHDL code that is being tested. Here I've made use of VUnit's [multiple test case recipe](https://vunit.github.io/user_guide.html#id5) as well.
 
 {% capture details %}
-{% highlight vhdl %}
-{% include_relative includes/vunit/half_adder_tb.vhd %}
-{% endhighlight %}
+{%
+  include vhdl_code_snippet.html
+  listing_num=listing_num
+  description="Half Adder VUnit testbench"
+  dir="includes/vunit/"
+  file="half_adder_tb.vhd"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 {% endcapture %}
 {% include details.html details=details summary="VHDL testbench code" %}
 
@@ -66,9 +87,14 @@ As you can see from the summary section of the output, the logic test runs twice
 
 With Invoke I can automate numerous tasks that depend on CLI or python interfaces. In the following script I set VUnits output directory to `_work`.
 
-```python
-{% include_relative includes/vunit/tasks.py %}
-```
+{%
+  include python_code_snippet.html
+  listing_num=listing_num
+  description="Invoke tasks definition using VUnit"
+  dir="includes/vunit/"
+  file="tasks.py"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
 
 Having installed Invoke with `pip install invoke` I can run `inv run` to execute this task.
 
