Add CI info for VUnit

--- a/_posts/2021-03-27-vunit.md
+++ b/_posts/2021-03-27-vunit.md
@@ -6,6 +6,7 @@ tags:
     - Tools
 ---
 {% assign listing_num = 1 %}
+{% assign figure_num = 1 %}
 
 VUnit "features the functionality needed to realize continuous and automated testing" of HDL code.
 It takes care of building, running tests (via a simulator like [GHDL]({% post_url 2021-03-25-ghdl %})) and evaluating the results. It also offers VHDL convenience procedures, functions and components as well as Verification Components. This post will cover the build/run functionality, the convenience library will be covered in a separate post.
@@ -37,7 +38,7 @@ Note that VUnit needs to get access to your VHDL testbench to do its magic so th
 %}
 {% assign listing_num = listing_num | plus: 1 %}
 
-Output from running `./run.py`:
+After making `run.py` executable with `chmod +x run.py`, the output from running `./run.py` is:
 
 ```
 {% include_relative includes/vunit/run.txt %}
@@ -98,6 +99,58 @@ With Invoke I can automate numerous tasks that depend on CLI or python interface
 
 Having installed Invoke with `pip install invoke` I can run `inv run` to execute this task.
 
+## CI example
+
+VUnit offers XUnit output in xml format which can be easily integrated with CI tools like Gitlab CI or Jenkins. To instruct VUnit to create an xml file we provide the `-x` argument and a filename: `./run.py -x results.xml`
+
+### Gitlab
+
+Gitlab offers CI on shared runners for free accounts, it requires a yaml specification in a file called `.gitlab-ci.yml`
+
+{%
+  include yaml_code_snippet.html
+  listing_num=listing_num
+  description="Gitlab CI configuration"
+  dir="includes/vunit/"
+  file="gitlab-ci.yml"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
+
+**Note**: Don't forget to set your VUnit python script to be executable with `chmod +x run_vunit.py`, even on windows, where you might need to do something like `git update-index --chmod=+x run_vunit.py` before pushing to gitlab.
+
+Gitlab even provides an overview of the number of tests and their results based on the XUnit output.
+
+{%
+  include image.html
+  dir="/assets/img/"
+  file="vunit_ci_gitlab.png"
+  figure_num=figure_num
+  description="Gitlab Results"
+%}
+{% assign figure_num = figure_num | plus: 1 %}
+
+
+### Github
+
+According to [VUnit's documentation](https://vunit.github.io/ci/script.html#github-actions) the following yaml should work for github:
+
+{%
+  include yaml_code_snippet.html
+  listing_num=listing_num
+  description="Github Actions configuration"
+  dir="includes/vunit/"
+  file="github_action.yml"
+%}
+{% assign listing_num = listing_num | plus: 1 %}
+
+As far as I can see, there is no official support for XUnit result parsing on Github.
+
+## XUnit-Viewer
+
+[Xunit Viewer](https://github.com/lukejpreston/xunit-viewer) can generate HTML from XUnit results files.
+
+See [example output here](/assets/html/vunit_xunit_viewer.html).
+
 ## Conclusion
 
-The build/run functionality of VUnit is a great abstraction of this otherwise tedious process, the results parsing helps you focus on the important output and to discard the uninteresting parts, such as long command lines which executed successfully.
+The build/run functionality of VUnit is a great abstraction of this otherwise tedious process, the results parsing helps you focus on the important output and to discard the uninteresting parts, such as long command lines which executed successfully. Getting a CI process up and running in 7 lines of yaml is pretty impressive too!
